--- a/Top_100_Codes.ipynb
+++ b/Top_100_Codes.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Top 100 Codes",
       "provenance": [],
-      "authorship_tag": "ABX9TyNsBkBQtNz8y0+d8b/HGPt/",
+      "authorship_tag": "ABX9TyMv0g4+8/C+ZVK25MFf4Ae1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -215,6 +215,152 @@
           },
           "metadata": {},
           "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "6) Greatest of two numbers:"
+      ],
+      "metadata": {
+        "id": "e2dgpO8S983G"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1, n2 = 50, 60\n",
+        "print(n1 if n1>n2 else n2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3dVON157-GNo",
+        "outputId": "91b95d52-c742-465b-8d8d-1b4d9b9603ab"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1, n2 = 50, 60\n",
+        "print(max(n1,n2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZeIew7HK-hbk",
+        "outputId": "5d994ece-d291-491e-b5cc-796ea2091471"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "60\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "7) Greatest of the Three numbers:"
+      ],
+      "metadata": {
+        "id": "Wzu9V5T3-pP6"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n1, n2, n3 = 50, 30, 49\n",
+        "print(max(n1,n2,n3))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WvJIzZ8V-vqU",
+        "outputId": "f8e53476-e366-4d14-8c2d-a92753a6eec8"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1, num2, num3 = 10 , 30 , 20\n",
+        "max = num1 if num1>num2 else num2\n",
+        "max = num3 if num3>max else max\n",
+        "print(max)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "i-5To5mN_GYd",
+        "outputId": "2be5cb29-2ec6-4773-ae18-ecf6a307be57"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num1, num2, num3 = 10 , 30 , 20\n",
+        "max = 0\n",
+        "if num1 >= num2 and num1 >= num3:\n",
+        "  print(num1)\n",
+        "elif num2 >= num1 and num2 >= num3:\n",
+        "  print(num2)\n",
+        "else:\n",
+        "  print(num3)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KiJNJCta_NJH",
+        "outputId": "6854eedd-a11c-4ada-deb7-38ee06fe2cc7"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "30\n"
+          ]
         }
       ]
     }
