--- a/Top_100_Codes.ipynb
+++ b/Top_100_Codes.ipynb
@@ -6,7 +6,7 @@
       "name": "Top 100 Codes",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM0wnapNdZOc/PjdVa+qyON",
+      "authorship_tag": "ABX9TyPfZfPI1dUg3xu2hf3jPSmF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1578,13 +1578,392 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "def swapList(newList):\n",
+        "  first_and_last_element = []\n",
+        "  middle_elements = []\n",
+        "  all = []\n",
+        "\n",
+        "  for i in range(0,len(newList)):\n",
+        "    if i in [0,len(newList)-1]:\n",
+        "      first_and_last_element.append(newList[i])\n",
+        "    else:\n",
+        "      middle_elements.append(newList[i])\n",
+        "  all.append(first_and_last_element[-1])\n",
+        "  all.extend(middle_elements)\n",
+        "  all.append(first_and_last_element[0])\n",
+        "  return all\n",
+        "\n",
+        "newList = [12, 35, 9, 56, 24] \n",
+        "print(swapList(newList))"
       ],
       "metadata": {
-        "id": "RrWDJLF-_DLs"
+        "id": "RrWDJLF-_DLs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c772dee1-5b7b-45a4-8ab4-84f667e18d82"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24, 35, 9, 56, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def swapList(list_val):\n",
+        "  a, *b, c = list_val\n",
+        "  list_val = [c, *b, a]\n",
+        "  return list_val\n",
+        "\n",
+        "newList = [12, 35, 9, 56, 24] \n",
+        "print(swapList(newList))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lhs7UsehQiA9",
+        "outputId": "6dc66c19-524c-4b5b-9f64-628a194d3962"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24, 35, 9, 56, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "28) swap two elements in a list"
+      ],
+      "metadata": {
+        "id": "pUO-ytYeRIfz"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Python3 program to swap elements\n",
+        "# at given positions\n",
+        "# Swap function\n",
+        "\n",
+        "def swapPositions(list_1, pos1, pos2):\n",
+        "\tlist_1[pos1], list_1[pos2] = list_1[pos2], list_1[pos1]\n",
+        "\treturn list_1\n",
+        "\n",
+        "# Driver function\n",
+        "List = [12, 35, 9, 56, 24] \n",
+        "print(swapPositions(List, 0, len(List)-1) )\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ECVDVpd3Rj2-",
+        "outputId": "a797b7fb-fb57-4c90-f318-73913ee73a97"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[24, 35, 9, 56, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "29) Check if element exists in list in Python"
+      ],
+      "metadata": {
+        "id": "VDRZKJY-PhcI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def el_exists(list_1, n):\n",
+        "  if n in list_1:\n",
+        "    return True\n",
+        "  else:\n",
+        "    return False\n",
+        "List = [12, 35, 9, 56, 24] \n",
+        "print(el_exists(List, 24) )"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uA12QbomPmIR",
+        "outputId": "6dc96094-5433-4913-9479-80b5e498d189"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "30) Different ways to clear a list in Python"
+      ],
+      "metadata": {
+        "id": "LzDhd4SNQCZa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "GEEK = [6, 0, 4, 1]\n",
+        "print('GEEK before clear:', GEEK) \n",
+        "GEEK.clear()\n",
+        "print('GEEK after clear:', GEEK) \n",
+        "# deleting list using reinitialization\n",
+        "GEEK = []\n",
+        "print('GEEK after reinitialization:', GEEK) \n",
+        "# deleting list using *= 0\n",
+        "GEEK *= 0\n",
+        "print('GEEK after using *= 0', GEEK) \n",
+        "# deleting list using del\n",
+        "del GEEK[:]\n",
+        "print('GEEK after  using del', GEEK) "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A9qML4dyQLY2",
+        "outputId": "b192c7d7-be49-4204-c4ad-49e50387d23d"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GEEK before clear: [6, 0, 4, 1]\n",
+            "GEEK after clear: []\n",
+            "GEEK after reinitialization: []\n",
+            "GEEK after using *= 0 []\n",
+            "GEEK after  using del []\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "31) Reversing a List"
+      ],
+      "metadata": {
+        "id": "uTKwi6f1RV8J"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_1 = [1,2,3,4,5]\n",
+        "\n",
+        "print([ele for ele in reversed(list_1)])\n",
+        "print(*list_1 , sep=\"\\n\")\n",
+        "\n",
+        "print(list_1[::-1])\n",
+        "list_1.reverse()\n",
+        "print(list_1)\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "odGcOyeORXeW",
+        "outputId": "2b43ecf0-e023-4ac4-ef90-c82c9fa83991"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[5, 4, 3, 2, 1]\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "[5, 4, 3, 2, 1]\n",
+            "[5, 4, 3, 2, 1]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "32) find sum of elements in list"
+      ],
+      "metadata": {
+        "id": "sYef3s_bUdi_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#recursion\n",
+        "def recu(list_2, size):\n",
+        "  if size == 0:\n",
+        "    return 0\n",
+        "  else :\n",
+        "    return list_2[size-1]+recu(list_2, size-1)\n",
+        "\n",
+        "\n",
+        "list_1 = [1,2,3,4,5]\n",
+        "size = len(list_1)\n",
+        "print(recu(list_1, size))\n",
+        "\n",
+        "#using sum inbuilt function\n",
+        "print(sum(list_1))\n",
+        "\n",
+        "# another method\n",
+        "ele = 0\n",
+        "sum_var = 0\n",
+        "while ele < len(list_1):\n",
+        "  sum_var += list_1[ele]\n",
+        "  ele+=1\n",
+        "print(sum_var)\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Fx9Wpu8AUgDo",
+        "outputId": "24ca8355-3b28-4f2c-943d-8170a5b8c1fb"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "15\n",
+            "15\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "33) Multiply all numbers in the list"
+      ],
+      "metadata": {
+        "id": "Hvco3G4ZW1TO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_1 = [1,2,3,4,5]\n",
+        "m = 1\n",
+        "for i in list_1:\n",
+        "  m*=i\n",
+        "print(m)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xoCDxQMMW4B2",
+        "outputId": "ec076d5e-28ba-4bce-9aa3-3c0021ea12b6"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "120\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "34)find smallest and largest number in a list"
+      ],
+      "metadata": {
+        "id": "350ZErbxXxt-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_1 = [1,2,3,4,5]\n",
+        "print(\"in list {} the element {} is the smallest number\".format(list_1,min(list_1)))\n",
+        "# using sort\n",
+        "list_1.sort()\n",
+        "print(list_1[0])\n",
+        "\n",
+        "\n",
+        "print(\"Largest Element\",max(list_1))\n",
+        "print(list_1[-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IF0NFYISXzP8",
+        "outputId": "186fbc2e-e7d2-4299-a8dc-62efc5d7941f"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "in list [1, 2, 3, 4, 5] the element 1 is the smallest number\n",
+            "1\n",
+            "Largest Element 5\n",
+            "5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "35) "
+      ],
+      "metadata": {
+        "id": "aR_0ce4mYgwG"
+      }
     }
   ]
 }
