--- a/Top_100_Codes.ipynb
+++ b/Top_100_Codes.ipynb
@@ -6,7 +6,7 @@
       "name": "Top 100 Codes",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPfZfPI1dUg3xu2hf3jPSmF",
+      "authorship_tag": "ABX9TyNKy0zl0sszKJib8rtQIMa9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1916,7 +1916,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "34)find smallest and largest number in a list"
+        "34) find smallest and largest number in a list"
       ],
       "metadata": {
         "id": "350ZErbxXxt-"
@@ -1959,10 +1959,90 @@
     {
       "cell_type": "markdown",
       "source": [
-        "35) "
+        "35) find second largest number in a list"
       ],
       "metadata": {
         "id": "aR_0ce4mYgwG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_1 = [1,2,3,4,5]\n",
+        "\n",
+        "list_1.sort()\n",
+        "print(list_1[-2])\n",
+        "\n",
+        "#or\n",
+        "\n",
+        "list_1.remove(max(list_1))\n",
+        "print(max(list_1))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OcBnLe4xaUgN",
+        "outputId": "ec7aa21e-c5f5-4897-9eb3-3cede031713a"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n",
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "36) find N largest elements from a list\n",
+        "\n",
+        "[differnces between sort and sorted](https://www.programiz.com/python-programming/methods/built-in/sorted)"
+      ],
+      "metadata": {
+        "id": "iFNJpDxqasZw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_1 = [1,2,3,4,5,67,8,9]\n",
+        "\n",
+        "n =2 \n",
+        "\n",
+        "list_1.sort(reverse=True)\n",
+        "print(list_1[:2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ob_oTWJoa5iE",
+        "outputId": "55c82655-e5ed-4a0b-f422-e2f9972b4688"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[67, 9]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "37) "
+      ],
+      "metadata": {
+        "id": "LB6DLWLCc_cM"
       }
     }
   ]
